crates/lingui_macro/tests/snapshots/js_icu__js_choices_may_contain_expressions.snap
---
source: crates/lingui_macro/tests/js_icu.rs
---
import { plural, select, selectOrdinal } from "@lingui/core/macro";
const messagePlural = plural(count, {
   one: foo.bar,
   other: variable
})
const messageSelect = select(gender, {
   male: 'he',
   female: variable,
   third: fn(),
   other: foo.bar
})

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as $_i18n } from "@lingui/core";
const messagePlural = $_i18n._(/*i18n*/ {
    id: "l6reUi",
    message: "{count, plural, one {{0}} other {{variable}}}",
    values: {
        count: count,
        variable: variable,
        0: foo.bar
    }
});
const messageSelect = $_i18n._(/*i18n*/ {
    id: "M4Fisk",
    message: "{gender, select, male {he} female {{variable}} third {{0}} other {{1}}}",
    values: {
        gender: gender,
        variable: variable,
        0: fn(),
        1: foo.bar
    }
});
