crates/lingui_macro/tests/snapshots/js_icu__js_dedup_values_in_icu.snap
---
source: crates/lingui_macro/tests/js_icu.rs
---
import { plural } from "@lingui/core/macro";

const message = plural(count, {
    one: `${name} has ${count} friend`,
    other: `${name} has {count} friends`
 })

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as $_i18n } from "@lingui/core";
const message = $_i18n._(/*i18n*/ {
    id: "tK7kAV",
    message: "{count, plural, one {{name} has {count} friend} other {{name} has {count} friends}}",
    values: {
        count: count,
        name: name
    }
});
