crates/lingui_macro/tests/snapshots/js_icu__js_icu_diffrent_object_literal_syntax.snap
---
source: crates/lingui_macro/tests/js_icu.rs
---
import { plural } from "@lingui/core/macro";

const messagePlural = plural(count, {
   one: '# Book',
   "other": '# Books',
   few: ('# Books'),
})

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as $_i18n } from "@lingui/core";
const messagePlural = $_i18n._(/*i18n*/ {
    id: "2y_Fr5",
    message: "{count, plural, one {# Book} other {# Books} few {# Books}}",
    values: {
        count: count
    }
});
