crates/lingui_macro/tests/snapshots/js_icu__js_icu_macro.snap
---
source: crates/lingui_macro/tests/js_icu.rs
---
import { plural, select, selectOrdinal } from "@lingui/core/macro";
const messagePlural = plural(count, {
   one: '# Book',
   other: '# Books'
})
const messageSelect = select(gender, {
   male: 'he',
   female: 'she',
   other: 'they'
})
const messageSelectOrdinal = selectOrdinal(count, {
   one: '#st',
   two: '#nd',
   few: '#rd',
   other: '#th',
})

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as $_i18n } from "@lingui/core";
const messagePlural = $_i18n._(/*i18n*/ {
    id: "V_M0Vc",
    message: "{count, plural, one {# Book} other {# Books}}",
    values: {
        count: count
    }
});
const messageSelect = $_i18n._(/*i18n*/ {
    id: "VRptzI",
    message: "{gender, select, male {he} female {she} other {they}}",
    values: {
        gender: gender
    }
});
const messageSelectOrdinal = $_i18n._(/*i18n*/ {
    id: "Q9Q8Bj",
    message: "{count, selectordinal, one {#st} two {#nd} few {#rd} other {#th}}",
    values: {
        count: count
    }
});
