crates/lingui_macro/tests/snapshots/js_icu__js_icu_nested_in_choices.snap
---
source: crates/lingui_macro/tests/js_icu.rs
---
import { plural } from "@lingui/core/macro"
const message = plural(numBooks, {
   one: plural(numArticles, {
      one: `1 book and 1 article`,
      other: `1 book and ${numArticles} articles`,
   }),
   other: plural(numArticles, {
      one: `${numBooks} books and 1 article`,
      other: `${numBooks} books and ${numArticles} articles`,
   }),
})

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as $_i18n } from "@lingui/core";
const message = $_i18n._(/*i18n*/ {
    id: "AA3wsz",
    message: "{numBooks, plural, one {{numArticles, plural, one {1 book and 1 article} other {1 book and {numArticles} articles}}} other {{numArticles, plural, one {{numBooks} books and 1 article} other {{numBooks} books and {numArticles} articles}}}}",
    values: {
        numBooks: numBooks,
        numArticles: numArticles
    }
});
