crates/lingui_macro/tests/snapshots/js_icu__js_plural_with_offset_and_exact_matches.snap
---
source: crates/lingui_macro/tests/js_icu.rs
---
import { plural } from '@lingui/macro'
plural(users.length, {
  offset: 1,
  0: "No books",
  1: "1 book",
  other: "\# books"
});

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as $_i18n } from "@lingui/core";
$_i18n._(/*i18n*/ {
    id: "CF5t-7",
    message: "{0, plural, offset:1 =0 {No books} =1 {1 book} other {# books}}",
    values: {
        0: users.length
    }
});
