crates/lingui_macro/tests/snapshots/js_icu__js_plural_with_placeholders.snap
---
source: crates/lingui_macro/tests/js_icu.rs
---
import { plural } from "@lingui/core/macro";

const message = plural(count, {
    one: `${name} has # friend`,
    other: `${name} has # friends`
 })

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as $_i18n } from "@lingui/core";
const message = $_i18n._(/*i18n*/ {
    id: "CvuUwE",
    message: "{count, plural, one {{name} has # friend} other {{name} has # friends}}",
    values: {
        count: count,
        name: name
    }
});
