crates/lingui_macro/tests/snapshots/js_icu__js_should_not_touch_non_lungui_fns.snap
---
source: crates/lingui_macro/tests/js_icu.rs
---
import { plural } from "@lingui/core/macro";
const messagePlural = customName(count, {
   one: '# Book',
   other: '# Books'
})

↓ ↓ ↓ ↓ ↓ ↓

const messagePlural = customName(count, {
    one: '# Book',
    other: '# Books'
});
