crates/lingui_macro/tests/snapshots/js_icu__js_should_not_treat_offset_in_select.snap
---
source: crates/lingui_macro/tests/js_icu.rs
---
import { select } from '@lingui/macro'
select(value, {
  offset: "..",
  any: "..",
  other: "..",
});

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as $_i18n } from "@lingui/core";
$_i18n._(/*i18n*/ {
    id: "QHtFym",
    message: "{value, select, offset {..} any {..} other {..}}",
    values: {
        value: value
    }
});
